@@ -3,6 +3,8 @@
 	* mono_jit_cleanup() is now called from a function that is registered
 	  via atexit(). This seems to be the only way to do that, since calling
 	  it from the destructor of KimonoPluginFactory makes mono crash.
+	* Added camelize() method from krubypluginfactory.
+	* Added "KSharedPtr<KSharedConfig>" to the marshallers array.
 
 2008-07-01  Arno Rehn  <arno@arnorehn.de>
 
